--- a/PR/workingBrain_PR_Main.Rmd
+++ b/PR/workingBrain_PR_Main.Rmd
@@ -1,12 +1,15 @@
 ---
-title             : "Characterizing the neural markers of occupational wellbeing"
-shorttitle        : "Neural markers of occupational wellbeing"
+title             : |
+  | **Pre-registration:**
+  | **Characterising the neural markers of occupational wellbeing.**
 
-author: 
+shorttitle        : "Pre-registration: Neural markers of occupational wellbeing"
+
+author:
   - name          : "Raul Ungureanu"
     affiliation   : "1, 2"
     corresponding : yes    # Define only one corresponding author
-    address       : "Brighton, BN1 9QG, United Kingdom"
+    address       : "School of Psychology, University of Sussex, Falmer, BN1 9QH"
     email         : "r.ungureanu@sussex.ac.uk"
   - name          : "Charlotte Rae"
     affiliation   : "2,3"
@@ -23,7 +26,7 @@ authornote: |
 abstract: |
   
   Occupational factors can have numerous impacts on wellbeing and mental health, from under- or over-employment, to shift work, and commuting time. 
-  However, the neural mechanisms by which such occupational factors influence subjective wellbeing, and engender vulnerability to mental health symptoms, are less well understood. This project aims to characterize the neurophysiological processes through which occupational factors affect our health and wellbeing in an analysis of data from the UK Biobank. The UK Biobank is a large-scale epidemiological study of 500,000 individuals, ~40,000 of whom have completed an MRI session at time of writing. 
+  However, the neural mechanisms by which such occupational factors influence subjective wellbeing, and engender vulnerability to mental health symptoms, are less well understood. This project aims to characterize the neurophysiological processes through which occupational factors affect our health and wellbeing in an analysis of data from the UK Biobank: a large-scale epidemiological study of 500,000 individuals, ~40,000 of whom have completed an MRI session at time of writing. 
   To characterise neural markers of occupational wellbeing in the Biobank, we will implement a multifactorial analysis strategy, beginning with an exploratory analysis of the non-imaging variables in our dataset. This will allow us to sufficiently characterise the association of occupational factors with sociodemographic, lifestyle, and health-related information in order to appropriately control for these in subsequent analyses focusing on neurophysiology. 
   We intend to successively update our preregistration documentation as we proceed through each analysis step in this project. This document forms the first document in this series. Analysis workflows, together with time-stamped logs detailing data access events, if available, will be linked to subsequent preregistration documentation. 
    
@@ -47,7 +50,17 @@ csl               : apaNumeric
 
 documentclass     : "apa6"
 classoption       : "man, donotrepeattitle"
-output            : papaja::apa6_word
+output            : papaja::apa6_pdf
+
+header-includes:
+  - \usepackage{fancyhdr}
+  - \pagestyle{fancy}
+  - \fancyhf{}
+  - \fancyhead[L]{\bfseries Pre-registration $\colon$ Neural markers of occupational wellbeing.}
+  - \thispagestyle{empty}
+  - \fancyhead[R]{\thepage}
+  - \renewcommand{\footrulewidth}{0.4pt}
+  - \renewcommand{\headrulewidth}{0.2pt}
 ---
 
 
